--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "prettier"
   ],
   "rules": {
+  "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
   "camelcase": "off",
   "import/no-unresolved": "error",
   "@typescript-eslint/naming-convention": [
