--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,7 +84,7 @@
       ]
     }
   ],
-  "prettier/prettier": "error",
+  "prettier/prettier": ["error", { "endOfLine": "auto" }],
   "react/jsx-filename-extension": [
     1,
     {
